--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,7 @@ $monospace-font-family: "Computer Modern Typewriter", "CMU Typewriter Text", "Co
 $base-font-size:   18px;
 $base-font-weight: 400;
 $small-font-size:  90%;
-$base-line-height: 1.4;
+$base-line-height: 1.3;
 
 $spacing-unit:     32px;
 
